k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: authify
  labels:
    name: authify
